<resources>
    <string name="app_name">흰디의 코디배틀</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="password_check">비밀번호 확인</string>
    <string name="nickname">닉네임</string>
    <string name="sign_in">회원가입</string>
    <string name="login">로그인</string>
    <string name="id_input">아이디를 입력해주세요</string>
    <string name="pw_input">비밀번호를 입력해주세요</string>
    <string name="pw_chk_input">비밀번호를 다시 입력해주세요</string>
    <string name="nickname_input">닉네임을 입력해주세요</string>
    <string name="nickname_chk">닉네임은 3글자까지 가능합니다</string>
    <string name="btn_more">더보기</string>
    <string name="dialog_delete_text">정말 삭제하시겠습니까?</string>
    <string name="dialog_delete_ok">삭제하기</string>
    <string name="dialog_delete_cancel">취소하기</string>
    <string name="end_of_battle">모든 배틀을 진행하셨군요!\n이제 옷입히기를 해볼까요?</string>
    <string name="entrance_start">시작하기</string>
    <string name="entrance_help">도움말</string>
    <string name="entrance_go_home">홈으로가기</string>

    <!-- 배틀 필터 기본 옵션 -->
    <string-array name="battle_filter_options">
        <item>배틀별</item> <!-- 기본값 -->
    </string-array>

    <!-- 정렬 옵션 -->
    <string-array name="sort_options">
        <item>랭킹순</item> <!-- 기본값 -->
        <item>최신순</item>
    </string-array>
</resources>