<?xml version="1.0" encoding="utf-8"?>

<!--
 * 로그인 화면
 * @author 임원정
 * @since 2024.07.28
 * @version 1.0
 *
 * <pre>
 * 수정일        수정자        수정내용
 * ==========  ========     ===========================
 * 2024.07.28  	임원정       최초 생성
 * 2024.07.30  	조희정       페이지 디자인
 * </pre>
-->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <!--    로고    -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="120dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_home_title" />

        <!--    아이디 입력   -->
        <ImageView
            android:id="@+id/img_id_heart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:srcCompat="@drawable/ic_heart" />

        <com.heendoongs.coordibattle.common.OutLineTextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/dongle_bold"
            android:text="@string/id"
            android:textColor="@color/pink"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_id_heart"
            app:layout_constraintStart_toEndOf="@+id/img_id_heart"
            app:layout_constraintTop_toTopOf="@+id/img_id_heart"
            app:textStrokeColor="@color/light_pink"
            app:textStrokeWidth="6"
            app:outlineShadowColor="#75000000"
            app:outlineShadowRadius="2"
            app:outlineShadowDy="2"/>


        <EditText
            android:id="@+id/edit_id"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/dongle_regular"
            android:hint="@string/id_input"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:background="@drawable/input_text"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/id"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/id" />

        <!--    비밀번호 입력   -->
        <ImageView
            android:id="@+id/img_pw_heart"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="80dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_id_heart"
            app:srcCompat="@drawable/ic_heart" />

        <com.heendoongs.coordibattle.common.OutLineTextView
            android:id="@+id/pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/dongle_bold"
            android:text="@string/password"
            android:textColor="@color/pink"
            android:textSize="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_pw_heart"
            app:layout_constraintStart_toEndOf="@+id/img_pw_heart"
            app:layout_constraintTop_toTopOf="@+id/img_pw_heart"
            app:textStrokeColor="@color/light_pink"
            app:textStrokeWidth="6"
            app:outlineShadowColor="#75000000"
            app:outlineShadowRadius="2"
            app:outlineShadowDy="2"/>

        <EditText
            android:id="@+id/edit_pw"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="24dp"
            android:fontFamily="@font/dongle_regular"
            android:hint="비밀번호를 입력해주세요"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="25dp"
            android:background="@drawable/input_text"
            android:paddingLeft="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/pw"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="@+id/pw" />

        <TextView
            android:id="@+id/login_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dongle_bold"
            android:textColor="@color/red"
            android:textSize="20dp"
            app:layout_constraintStart_toStartOf="@+id/edit_pw"
            app:layout_constraintTop_toBottomOf="@+id/edit_pw" />

        <!--    버튼    -->
        <ImageButton
            android:id="@+id/btn_sign_up_page"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="20dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FF8A00"
            android:fontFamily="@font/dongle_bold"
            android:scaleType="centerInside"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_pw"
            app:srcCompat="@drawable/ic_signup_page_btn" />

        <ImageButton
            android:id="@+id/btn_login"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:background="@android:color/transparent"
            android:fontFamily="@font/dongle_bold"
            android:scaleType="centerInside"
            android:text="@string/login"
            android:textSize="35dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_sign_up_page"
            app:srcCompat="@drawable/ic_login_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="132dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>