<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:id="@+id/dialog_card"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="260dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/dialog_delete_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dongle_bold"
                android:text="@string/dialog_delete_text"
                android:textSize="37sp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="20dp"
                />

            <ImageButton
                android:id="@+id/dialog_ok_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="15dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/dialog_ok_button"
                />

            <TextView
                android:id="@+id/dialog_delete_ok"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/dialog_ok_button"
                app:layout_constraintEnd_toEndOf="@id/dialog_ok_button"
                app:layout_constraintTop_toTopOf="@id/dialog_ok_button"
                app:layout_constraintBottom_toBottomOf="@id/dialog_ok_button"
                android:layout_marginStart="40dp"
                android:textSize="30sp"
                android:fontFamily="@font/dongle_bold"
                android:textColor="@color/light_gray"
                android:text="@string/dialog_delete_ok"
                />

            <ImageButton
                android:id="@+id/dialog_cancel_button"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                app:layout_constraintTop_toBottomOf="@id/dialog_ok_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="15dp"
                android:scaleType="fitCenter"
                android:background="@android:color/transparent"
                android:src="@drawable/dialog_cancel_button"
                />

            <TextView
                android:id="@+id/dialog_delete_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="@id/dialog_cancel_button"
                app:layout_constraintEnd_toEndOf="@id/dialog_cancel_button"
                app:layout_constraintTop_toTopOf="@id/dialog_cancel_button"
                app:layout_constraintBottom_toBottomOf="@id/dialog_cancel_button"
                android:layout_marginStart="40dp"
                android:textSize="30sp"
                android:fontFamily="@font/dongle_bold"
                android:textColor="@color/black"
                android:text="@string/dialog_delete_cancel"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>